--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "../node_modules/nes.css/css/nes.css";
+
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+*:focus {
+  outline: 0;
+}
+
+html,
+body,
+app-root {
+  height: 100%;
+  display: block;
+}
+
+body {
+  background: #191920 url("./assets/img/background.svg") no-repeat center top;
+  -webkit-font-smoothing: antialiased;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.is-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-more {
+  margin: 20px;
+  width: 300px;
+}
+
+.ajusts-wh {
+  width: 100%;
+  height: 100%;
+}
