--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-search (emitePokemonsBuscado)="escutaEventoDeBusca($event)"></app-search>
 <div>
   <section class="grid grid-template-columns">
     <app-pokemon-card
