--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -3,6 +3,7 @@
     style="
       display: flex;
       justify-content: space-between;
+      flex-wrap: wrap;
       align-items: center;
       padding: 0 20px;
     "
@@ -13,6 +14,20 @@
       </a>
     </div>
     <div><h1 style="color: #ffff;">NG - DEX</h1></div>
-    <div><i class="nes-icon github is-large"></i></div>
+    <div class="rede-social">
+      <a id="github" href="https://github.com/GustavoLima93" target="_blank"
+        ><i class="nes-icon github is-large"></i
+      ></a>
+      <a
+        id="facebook"
+        href="https://www.facebook.com/gustavo.oliveira93"
+        target="_blank"
+      >
+        <i class="nes-icon facebook is-large"></i
+      ></a>
+      <a id="twitter" href="https://twitter.com/dev_ghlima" target="_blank"
+        ><i class="nes-icon twitter is-large"></i
+      ></a>
+    </div>
   </div>
 </nav>
