--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -15,17 +15,26 @@
     </div>
     <div><h1 style="color: #ffff;">NG - DEX</h1></div>
     <div class="rede-social">
-      <a id="github" href="https://github.com/GustavoLima93" target="_blank"
+      <a
+        id="github"
+        rel="noopener noreferrer"
+        href="https://github.com/GustavoLima93"
+        target="_blank"
         ><i class="nes-icon github is-large"></i
       ></a>
       <a
         id="facebook"
+        rel="noopener noreferrer"
         href="https://www.facebook.com/gustavo.oliveira93"
         target="_blank"
       >
         <i class="nes-icon facebook is-large"></i
       ></a>
-      <a id="twitter" href="https://twitter.com/dev_ghlima" target="_blank"
+      <a
+        id="twitter"
+        rel="noopener noreferrer"
+        href="https://twitter.com/dev_ghlima"
+        target="_blank"
         ><i class="nes-icon twitter is-large"></i
       ></a>
     </div>
