--- a/src/app/pages/home/components/search/search.component.html
+++ b/src/app/pages/home/components/search/search.component.html
@@ -3,6 +3,7 @@
   class="nes-field is-inline"
 >
   <form [formGroup]="formularioDeBusca" class="ajusts-wh">
+    <label for="dark_field" hidden> campo de busca </label>
     <input
       type="text"
       id="dark_field"
